Fixed some overview text

--- a/documents/holc-biodiversity.html
+++ b/documents/holc-biodiversity.html
@@ -386,46 +386,26 @@ based on these data.</p>
 <div id="data" class="section level4">
 <h4><em>Data</em></h4>
 <p><strong>EJScreen</strong></p>
-<p>We will be working with data from the United States Environmental
+<p>I am working with data from the United States Environmental
 Protection Agency’s EJScreen: Environmental Justice Screening and
-Mapping Tool.</p>
-<p>According to the <a href="https://www.epa.gov/ejscreen/purposes-and-uses-ejscreen">US EPA
-website</a>:</p>
-<blockquote>
-<p>This screening tool and data may be of interest to community
-residents or other stakeholders as they search for environmental or
-demographic information. It can also support a wide range of research
-and policy goals. The public has used EJScreen in many different
-locations and in many different ways.</p>
-<p>EPA is sharing EJScreen with the public:<br />
-- to be more transparent about how we consider environmental justice in
-our work,<br />
-- to assist our stakeholders in making informed decisions about pursuing
-environmental justice and,<br />
-- to create a common starting point between the agency and the public
-when looking at issues related to environmental justice.</p>
-</blockquote>
-<p>EJScreen provides on environmental and demographic information for
-the US at the Census <a href="https://en.wikipedia.org/wiki/Census_tract">tract</a> and <a href="https://en.wikipedia.org/wiki/Census_block_group">block group</a>
-levels. You will be working with block group data that has been
-downloaded from the <a href="https://www.epa.gov/ejscreen/download-ejscreen-data">EPA site</a>.
-To understand the associated data columns, you will need to explore the
-Technical Documentation and column description spreadsheet available in
-the data folder. I also encourage you to explore the <a href="https://www.epa.gov/ejscreen/limitations-and-caveats-using-ejscreen">limitations
-and caveats</a> of the data.</p>
+Mapping Tool. EJScreen provides on environmental and demographic
+information for the US at the Census <a href="https://en.wikipedia.org/wiki/Census_tract">tract</a> and <a href="https://en.wikipedia.org/wiki/Census_block_group">block group</a>
+levels. I am working with block group data that has been downloaded from
+the <a href="https://www.epa.gov/ejscreen/download-ejscreen-data">EPA
+site</a>.</p>
 <p><strong>Mapping Inequality</strong></p>
 <p>A team of researchers, led by the <a href="https://dsl.richmond.edu/">Digital Scholarship Lab</a> at the
 University of Richmond have digitized maps and information from the HOLC
 as part of the <a href="https://dsl.richmond.edu/panorama/redlining/#loc=5/39.1/-94.58">Mapping
 Inequality</a> project.</p>
-<p>We will be working with maps of HOLC grade designations for Los
-Angeles. Information on the data can be found <a href="https://dsl.richmond.edu/panorama/redlining/#loc=5/39.1/-94.58&amp;text=downloads">here</a>.<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a></p>
+<p>I am specifically working with maps of HOLC grade designations for
+Los Angeles. Information on the data can be found <a href="https://dsl.richmond.edu/panorama/redlining/#loc=5/39.1/-94.58&amp;text=downloads">here</a>.<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a></p>
 <p><strong>Biodiversity observations</strong></p>
 <p>The <a href="gbif.org">Global Biodiversity Information Facility</a>
 is the largest aggregator of biodiversity observations in the world.
 Observations typically include a location and date that a species was
-observed.</p>
-<p>We will be working observations of birds from 2021 onward.</p>
+observed. I am only working with observations of birds from 2021
+onward.</p>
 </div>
 <div id="highlights-of-analysis" class="section level4">
 <h4><em>Highlights of Analysis</em></h4>
