--- a/documents/holc-biodiversity.html
+++ b/documents/holc-biodiversity.html
@@ -383,6 +383,8 @@ neighborhoods remain the most undersampled areas across 195 US cities.
 This gap is highly concerning, because conservation decisions are made
 based on these data.</p>
 <p>Check out coverage by <a href="https://eos.org/articles/bird-biodiversity-reports-reflect-cities-redlined-past?utm_source=EosBuzz&amp;mkt_tok=OTg3LUlHVC01NzIAAAGOx3ckQPpeDY3QyFKdUnBSYqILj3qLrgb_Q2lasphwcF90xEzMgjZFUo3NHsw3caXDcZe6I8D8qdVsSRr3wzhb6LKAQRgNo8ffhjieEbDwMw">EOS</a>.</p>
+<p>In this analysis, I aim to understand how historical patterns of
+injustice shapes demographic and environmental conditions of today.</p>
 </div>
 <div id="data" class="section level4">
 <h4><em>Data</em></h4>
